--- a/deployment/sandbox-v2/helm/charts/prereg/templates/ui-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/prereg/templates/ui-dep.yaml
@@ -43,22 +43,22 @@ spec:
         - name: ui-config
           configMap:
             name: {{ .Values.services.ui.configName }}
-        readinessProbe:
-          httpGet:
-            path: {{ .Values.services.auth.healthUrl }}
-            port: {{ .Values.services.auth.ports.containerPort }}
-          periodSeconds: {{ .Values.probe.period }}
-          timeoutSeconds: {{ .Values.probe.timeout }}
-        livenessProbe:
-          httpGet:
-            path: {{ .Values.services.auth.healthUrl }}
-            port: {{ .Values.services.auth.ports.containerPort }}
-          periodSeconds: {{ .Values.probe.livenessPeriod }}
-          timeoutSeconds: {{ .Values.probe.timeout }}
-        startupProbe:
-          httpGet:
-            path: {{ .Values.services.auth.healthUrl }}
-            port: {{ .Values.services.auth.ports.containerPort }}
-          failureThreshold: {{ .Values.probe.failureThreshold }}
-          periodSeconds: {{ .Values.probe.startupPeriod }}
+#        readinessProbe:
+#          httpGet:
+#            path: {{ .Values.services.ui.healthUrl }}
+#            port: {{ .Values.services.ui.ports.containerPort }}
+#          periodSeconds: {{ .Values.probe.period }}
+#          timeoutSeconds: {{ .Values.probe.timeout }}
+#        livenessProbe:
+#          httpGet:
+#            path: {{ .Values.services.ui.healthUrl }}
+#            port: {{ .Values.services.ui.ports.containerPort }}
+#          periodSeconds: {{ .Values.probe.livenessPeriod }}
+#          timeoutSeconds: {{ .Values.probe.timeout }}
+#        startupProbe:
+#          httpGet:
+#            path: {{ .Values.services.ui.healthUrl }}
+#            port: {{ .Values.services.ui.ports.containerPort }}
+#          failureThreshold: {{ .Values.probe.failureThreshold }}
+#          periodSeconds: {{ .Values.probe.startupPeriod }}
 
